# agent

./: .gitignore  pyproject.toml  readme.md
agent/: __main__.py
agent/core/: common.py  config.py
agent/llm/: init.py  main.py  result.py  writer.py
agent/podman/: __init__.py  bash.py  create.py  create_container.py  create_file.py  delete.py  exec.py  get_image.py  is_exists.py  nohup.py  pull.py  run.py  start.py  stop.py
agent/web/: __init__.py  fetch.py  search.py
