[project]
dependencies = [
    'pydantic-ai-slim',
    'httpx',
    'rich',
    "html2text>=2024.2.26",
]
name = 'star_agent'
version = '25.0.0'
readme = 'readme.md'
requires-python = '>=3.11'
classifiers = [
    'License :: OSI Approved :: GNU Affero General Public License v3',
]

[tool.pyright]
venvPath = '.'
venv = '.venv'

